app/assets/stylesheets/observations/search.scss
#header {
  margin-bottom: 0px;
}
#full-width-notice {
  margin-bottom: 0px;
  margin-top: 0px;
}
#main-container {
  width: 100%;
}
#bodywrapper {
  margin-bottom: -180px;
}
#bodywrapper:after {
  height: 180px;
}
#wrapper {
  margin-bottom: 0px;
}
#results {
  width: 100%;
  background: #eee;
  min-height: 450px;
  display: inline-block;
}
#results > .container {
  height: 0px;
}
#view-controls {
  position: absolute;
  z-index: 2;
  margin-top: 15px;
}
#layer-control li {
  padding: 0 10px;
}
#obs-container .location .fadednowrap {max-width: 200px;}
#result-grid,
#taxa-grid,
#result-table {
  margin-top: 60px;
}

#obs-container .taxon.has-com-name .secondary-name { 
  color: #333;
}

#result-grid .thumbnail {
  margin-bottom: 30px;
  border: 1px solid #ddd;
}
.grid .thumbnail {
  position: relative;
}
.grid .photo {
  display: block;
  width: 100%;
  background-size: cover;
  background-position: center;
  margin: 0px auto;
  text-align: center;
  background-color: #ccc;
  position: relative;
}
.grid .photo .icon, 
.grid .photo:hover .icon,
.grid .photo:active .icon,
.grid .photo:visited .icon,
.grid .photo:link .icon {
  display: none;
}
.grid .photo.iconic {
  background-color: #ccc;
}
.grid .photo.iconic .icon,
.grid .photo.iconic .icon:hover,
.grid .photo.iconic .icon:active,
.grid .photo.iconic .icon:visited,
.grid .photo.iconic .icon:link {
  color: white;
  display: inline-block;
}
.grid .photo .sound-icon { display: none; }
.grid .photo.sound .sound-icon {
  display: inline-block;
  color: #777;
  font-size: smaller;
}
.grid .photo.has-photo.sound .sound-icon {
  color: white;
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: rgba( 0, 0, 0, 0.7 );
  padding: 10px;
  font-size: 24px;
}
.grid .photo {
  height: 120px;
  line-height: 110px;
  font-size: 60px;
}
@media (min-width: 768px) {
  .grid .photo {
    height: 157.5px;
    line-height: 140px;
    font-size: 90px;
  }
}
@media (min-width: 992px) {
  .grid .photo {
    height: 212.5px;
    font-size: 135px;
    line-height: 200px;
  }
}
@media (min-width: 1200px) {
  .grid .photo {
    height: 262.5px;
    line-height: 240px;
    font-size: 180px;
  }
}

.bootstrap-10 .grid .photo {
  height: 212px;
  line-height: 180px;
  font-size: 75px;
}
@media (min-width: 768px) {
  .bootstrap-10 .grid .photo {
    height: 128px;
    line-height: 98px;
  }
}
@media (min-width: 992px) {
  .bootstrap-10 .grid .photo {
    height: 172px;
    line-height: 142px;
    font-size: 112px;
  }
}
@media (min-width: 1200px) {
  .bootstrap-10 .grid .photo {
    height: 212px;
    line-height: 180px;
    font-size: 112px;
  }
}
.grid .caption {
  height: 85px;
  padding: 12px;
}
.grid .title {
  display: block;
  margin-bottom: 3px
}
@media only screen and (max-width : 1024px)  {
  #filters > h1 {
    font-size: 2.2em;
  }
  #stats-container .statcol .stat-title {
    font-size: 0.7em;
  }
  .bootstrap .container {
    width: 100%;
  }
}
inat-taxon.split-taxon .display-name {
  font-weight: bold;
  display: block;
  font-size: 15px;
  color: black;
  width: 80%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
inat-taxon.split-taxon .secondary-name {
  display: block;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#result-grid inat-taxon.split-taxon .display-name {
  font-size: 18px;
  line-height: 18px;
}
#result-grid inat-taxon.split-taxon .has-com-name .secondary-name {
  line-height: 26px;
}
#result-grid inat-taxon.split-taxon .no-com-name .display-name {
  margin-bottom: 28px;
}
#result-table inat-taxon.split-taxon .secondary-name {
  margin-bottom: 15px;
}
#result-table inat-taxon.split-taxon .no-com-name .display-name,
#result-table inat-taxon.split-taxon .noname.display-name {
  margin-bottom: 34px;
}
inat-taxon.split-taxon .icon {display: none;}
.bootstrap .userimage {
  border-radius: 120px;
  width: 48px;
  height: 48px;
  line-height: 45px;
  font-size: 32px;
  background-size: cover;
  background-position: center;
  background-color: #aaa;
  color: white;
  text-align: center;
  border: 2px solid white;
  vertical-align: middle;
}
#result-grid .userimage {
  position: absolute;
  right: 15px;
  bottom: 65px;
}
.bootstrap .userimage:hover,
.bootstrap .userimage:active {opacity: 1; color: #eee;}
#result-grid .meta {color: #a3a3a3; font-size: 12px; overflow: hidden;}
#result-grid .meta .comments i,
#result-grid .meta .identifications i {font-size: 110%;}
#result-grid .meta .pull-right {
  position: relative;
  top: 2px;
}
#result-grid .favorites { margin-left: 5px;}
#result-grid .comments {margin-left: 5px;}

.form {
  background: #fff;
}
.ng-cloak { display:none; }
.bootstrap .observation.media { margin-top: 0; }
#map {
  width: 100%;
  /*height: 510px;*/
  background-color: #e3eaf6;
  position: absolute;
  top: 0;
  left: 0;
}
#obs-container,
#obs-container .container,
#map, #observations-map {
  height: 550px;
}
#observations-map {
  background-color: #e3eaf6;
}
#obs-container { position: relative; }
#obs {
  background-color: white;
  padding: 0px;
  height: 420px;
  overflow-x: hidden;
  overflow-y: scroll;
  position: relative;
  top: 15px;
}
#maprow {
  position: relative;
  height: 0;
}
.fullscreen-enabled #maprow,
#obs-container.fullscreen-enabled {
  position: absolute;
  left: 0;
  top: 0;
}
#map-controls {
  position: absolute;
  top: 75px;
  left: 15px;
}
.btn [class^="icon-"],
.btn [class*=" icon-"] {
  position: relative;
  top: -1px;
}
#map-legend-control {
  position: absolute;
  top: 500px;
  left: 15px;
}
#map-legend {
  position: static;
  display: block !important;
  border: 0 transparent;
  box-shadow: none;
  top: -366px;
  left: -320px;
}
#map-legend-control .gmapv3legend { max-width: none; }
#map-legend-control .gmapv3legend .ul-container {
  width: 400px;
}
/* ... */

